[package]
name = "windows-kernel-build"
version = "0.1.0"
authors = ["qwbpro <you@example.com>"]
edition = "2021"
description = "A fun game where you guess what number the computer has chosen."
license = "MIT OR Apache-2.0"
repository = "https://github.com/emptyqwb/windows-kernel-build.git"

[dependencies]
thiserror = "1.0"
winreg = "0.51"

